// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button :props :block 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-size-full-width"
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button :props :content 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
      bar
      
    </span>
  </button>
</div>
`;

exports[`Button :props :disabled 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled"
  disabled=""
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button :props :icon function 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--icon-only"
  type="button"
>
  
  <i>
    custom icon
  </i>
  
  
</button>
`;

exports[`Button :props :loading 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled t-is-loading"
  type="button"
>
  
  <svg
    class="t-icon t-icon-loading"
    version="1.1"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
      fill-opacity=".9"
      fill-rule="evenodd"
    />
  </svg>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
  
</button>
`;

exports[`Button :props :shape 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--shape-round"
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button :props :size 1`] = `
<button
  class="t-button t-size-l t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button :props :variant 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary"
  type="button"
>
  <span
    class="t-button__text"
  >
    
    text
    
  </span>
</button>
`;

exports[`Button <slot> <icon> 1`] = `
<button
  class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--icon-only"
  type="button"
>
  
  
  <div />
  
  
  
</button>
`;
